# mesonpep517

./: .gitmodules  CHANGELOG.md  README.rst  meson.build  meson.options  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  ozi.yml  scorecards.yml
doc/: conf.py  index.md  index.rst  pyproject.md.rst  requirements.txt
mesonpep517/: buildapi.py
ozi_build/: _at.py  _categories.py  _char.py  _files.py  _pyc_wheel.py  _redos.py  _repeat.py  _sequence.py  _sre.py  _util.py  buildapi.py  config.py  meson.build  metadata.py  schema.py
