[build-system]
requires = [
    "wheel>0.33",
    "mesonpep517==0.2",
    "meson[ninja]>1.1.0",
    'tomli>=2.0.0;python_version<"3.11"',
    "setuptools>=64",
]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author="Thibault Saunier"
author-email="tsaunier@gnome.org"
maintainer="Eden Rose Duff MSc"
maintainer-email="help@oziproject.dev"
summary="Create pep517 compliant packages from the meson build system, OZI-maintained fork."
home-page="https://github.com/OZI-Project/OZI.build"
requires-python="py3"
description-file="README.rst"
platforms="any"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires = ["wheel>0.33", "mesonpep517==0.2", "meson[ninja]>1.1.0", 'tomli>=2.0.0;python_version<"3.11"', "setuptools"]
project-urls= [
    "Source, https://github.com/OZI-Project/OZI.build",
    "Documentation, https://thiblahute.gitlab.io/mesonpep517/",
]
